--- a/src/index.css
+++ b/src/index.css
@@ -17,7 +17,7 @@ html,
 body {
   font-size: 100%;
   font-family: "Lato", sans-serif;
-  background: #000;
+  /* background: #000; */
 }
 img {
   max-width: 100%;
