--- a/src/index.css
+++ b/src/index.css
@@ -11,6 +11,8 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  transition: 0.3s;
+  /* background-color: rgb(29, 155, 240); */
 }
 
 html,
