--- a/src/components/logo/index.scss
+++ b/src/components/logo/index.scss
@@ -6,6 +6,6 @@
   img {
     height: App.rem(36);
     width: App.rem(36);
-    background: rgb(187, 19, 19);
+    // background: rgb(187, 19, 19);
   }
 }
