--- a/src/index.css
+++ b/src/index.css
@@ -11,7 +11,7 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  transition: 0.3s;
+  transition: 0.4s;
   /* background-color: rgb(29, 155, 240); */
 }
 
@@ -19,7 +19,7 @@ html,
 body {
   font-size: 100%;
   font-family: "Lato", sans-serif;
-  /* background: #000; */
+  background: rgb(29, 155, 240);
 }
 img {
   max-width: 100%;
