--- a/src/components/overlay/index.scss
+++ b/src/components/overlay/index.scss
@@ -4,16 +4,16 @@
   top: 0;
   left: 0;
   width: 100%;
-  height: 100vh;
+  min-height: 100%;
   // display: none;
   opacity: 0;
-  background-color: map-get(App.$colors, primary2);
+  visibility: hidden;
+  background-color: map-get(App.$colors, primary9);
   z-index: 1;
+  backdrop-filter: blur(10px);
+  // filter: blur(0.6px);
   @include App.desktop {
     display: none;
   }
 }
-.over {
-  // display: block;
-  opacity: 1;
-}
+
