--- a/src/components/overlay/index.scss
+++ b/src/components/overlay/index.scss
@@ -8,9 +8,9 @@
   // display: none;
   opacity: 0;
   visibility: hidden;
-  background-color: map-get(App.$colors, primary9);
+  background-color: map-get(App.$colors, primary4);
   z-index: 1;
-  backdrop-filter: blur(10px);
+  // backdrop-filter: blur(App.rem(10));
   // filter: blur(0.6px);
   @include App.desktop {
     display: none;
