Finish Hero Section

--- a/src/App.scss
+++ b/src/App.scss
@@ -19,6 +19,7 @@ $colors: (
   "gradient-1": rgb(49, 246, 246),
   "gradient-2": rgb(29, 155, 240),
   "whiteColor": rgb(255, 255, 255),
+  "blackColor": rgba(0, 0, 0, 0.25),
 );
 
 $font-sizes-desktop: (
