--- a/src/components/Homepage/main/index.scss
+++ b/src/components/Homepage/main/index.scss
@@ -12,18 +12,51 @@ main {
   //   min-height: 100vh;
   .row {
     & > div {
-      min-height: 100vh;
+      @include App.desktop {
+        min-height: 100vh;
+      }
+      &:first-child {
+        text-align: center;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        @include App.desktop {
+          text-align: start;
+          align-items: flex-start;
+        }
+        h1 {
+          font-size: map-get(App.$font-sizes-mobile, h1);
+          color: map-get(App.$colors, whiteColor);
+          @include App.desktop {
+            font-size: map-get(App.$font-sizes-desktop, h1);
+          }
+        }
+        p {
+          font-size: map-get(App.$font-sizes-mobile, pargraph);
+          color: map-get(App.$colors, whiteColor);
+          opacity: 75%;
+          line-height: 150%;
+          @include App.desktop {
+            font-size: map-get(App.$font-sizes-desktop, pargraph);
+          }
+        }
+      }
     }
   }
   @include App.mobile {
     padding-top: App.rem(66);
-    background-image: none;
+    background-image: url("../../../assets/images/png/Frame94.png");
+    background-size: cover;
+    padding: App.rem(66);
   }
   @include App.large {
     background-position-x: 150%;
   }
   @include App.medium {
     // background-position-x: ;
-    background-image: none;
+    background-size: contain;
+    background-image: url("../../../assets/images/png/Frame94.png");
+    // background-image: none;
   }
 }
