--- a/src/components/Homepage/header/index.scss
+++ b/src/components/Homepage/header/index.scss
@@ -8,7 +8,7 @@ header {
   z-index: 10;
   width: 100%;
   max-height: App.rem(200);
-  .container {
+  .headerContainer {
     @include App.mobile {
       display: grid !important;
       max-height: App.rem(50);
