--- a/src/index.css
+++ b/src/index.css
@@ -25,7 +25,7 @@ html,
 body {
   /* height: 10000000px; */
   font-size: 100% !important;
-  font-family: "Heebo", sans-serif !important;
+  font-family: "Heebo" !important;
 }
 img {
   max-width: 100%;
