Start About Section

--- a/src/App.scss
+++ b/src/App.scss
@@ -15,9 +15,10 @@ $colors: (
   "primary8": rgb(195, 228, 251),
   "primary9": rgba(8, 79, 126, 0.4),
   "accent": rgb(240, 190, 5),
-  "neutral-1": rgb(246, 246, 246),
-  "gradient-1": rgb(49, 246, 246),
-  "gradient-2": rgb(29, 155, 240),
+  "neutral": rgb(246, 246, 246),
+  "gradient1": rgb(29, 155, 240),
+  "gradient2": rgb(49, 246, 246),
+  "gradient3": rgb(1, 76, 142),
   "whiteColor": rgb(255, 255, 255),
   "blackColor": rgba(0, 0, 0, 0.25),
 );
