--- a/src/App.scss
+++ b/src/App.scss
@@ -114,7 +114,7 @@ $grid-breakpoints: (
   visibility: visible;
 }
 .pDisply {
-  // display: block !important;
+  display: block !important;
   top: 0 !important;
   margin-top: rem(8);
   transform: translatey(0%) !important;
