--- a/src/components/collapse/index.scss
+++ b/src/components/collapse/index.scss
@@ -32,6 +32,8 @@
     }
   }
   .pragraph__text {
+    display: none;
+    // visibility: hidden;
     position: relative;
     top: -100%;
     width: 100%;
