--- a/src/index.css
+++ b/src/index.css
@@ -35,3 +35,8 @@ a,
 a:visited {
   text-decoration: none !important;
 }
+ul {
+  list-style: none;
+  padding: 0 !important;
+  margin: 0 !important;
+}
