--- a/src/components/navbar/index.scss
+++ b/src/components/navbar/index.scss
@@ -9,6 +9,7 @@
   z-index: 2;
   position: relative;
   @include App.mobile {
+    box-shadow: App.rem(0) App.rem(4) App.rem(4) App.rem(0) rgba(0, 0, 0, 0.25);
     transform: translatey(-100vh) !important;
     // display: none !important;
     flex-direction: column-reverse !important;
@@ -50,4 +51,3 @@
     }
   }
 }
-
