--- a/src/components/overlay/index.scss
+++ b/src/components/overlay/index.scss
@@ -16,4 +16,20 @@
     display: none !important;
   }
 }
-
+.overlay__contact {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  min-height: 100%;
+  // display: none;
+  opacity: 0;
+  visibility: hidden;
+  // background-color: map-get(App.$colors, primary4);
+  z-index: 1;
+  backdrop-filter: blur(App.rem(10));
+  // filter: blur(0.6px);
+  @include App.x-large {
+    display: none !important;
+  }
+}
