Add Page Spinner

--- a/src/components/member/index.scss
+++ b/src/components/member/index.scss
@@ -6,6 +6,7 @@
   align-items: center;
   border-radius: App.rem(20);
   place-items: center;
+  text-align: center;
   .picture {
     width: App.rem(80);
     height: App.rem(80);
