--- a/src/components/contact/index.scss
+++ b/src/components/contact/index.scss
@@ -4,6 +4,13 @@
   .main__contact {
     background-color: transparent;
     padding: App.rem(64) 0;
+    @include App.desktop {
+      min-height: 100vh;
+      display: grid;
+      place-items: center;
+      background-image: url(../../assets//images/png/Frame95.png);
+      // background-size: cover;
+    }
     .content {
       h2 {
         font-size: map-get(App.$font-sizes-mobile, h2);
@@ -15,10 +22,16 @@
         background-clip: text;
         -webkit-text-fill-color: transparent;
         margin-bottom: App.rem(18);
+        @include App.desktop {
+          font-size: map-get(App.$font-sizes-desktop, h1);
+        }
       }
       p {
         color: map-get(App.$colors, primary1);
         opacity: 0.75;
+        @include App.desktop {
+          font-size: map-get(App.$font-sizes-desktop, h4);
+        }
       }
     }
   }
@@ -27,6 +40,15 @@
       display: grid;
       grid-template-columns: repeat(2, 1fr);
       gap: App.rem(15);
+      @include App.medium {
+      }
+      @include App.desktop {
+        grid-template-columns: repeat(3, 1fr);
+        gap: App.rem(20);
+      }
     }
+  }
+  #footer {
+    background-color: map-get(App.$colors, whiteColor);
   }
 }
