--- a/src/components/member/index.scss
+++ b/src/components/member/index.scss
@@ -7,15 +7,27 @@
   border-radius: App.rem(20);
   place-items: center;
   text-align: center;
+  &:last-child {
+    // margin: 0 auto;
+    @include App.desktop {
+      grid-column-start: 2;
+    }
+  }
+  @include App.desktop {
+    padding: App.rem(48) App.rem(56);
+  }
   .picture {
     width: App.rem(80);
     height: App.rem(80);
     border-radius: 50%;
     overflow: hidden;
+    @include App.desktop {
+      scale: 1.5;
+    }
   }
 
   .name {
-    margin-top: App.rem(5);
+    margin-top: App.rem(30);
     h4 {
       background: linear-gradient(
         to right,
@@ -24,7 +36,10 @@
       );
       background-clip: text;
       -webkit-text-fill-color: transparent;
-      font-size: map-get(App.$font-sizes-mobile, h5 );
+      font-size: map-get(App.$font-sizes-mobile, h5);
+      @include App.desktop {
+        font-size: map-get(App.$font-sizes-mobile, h3);
+      }
     }
   }
   .job__title {
@@ -33,6 +48,9 @@
       font-size: map-get(App.$font-sizes-mobile, small);
       color: map-get(App.$colors, primary1);
       opacity: 0.75;
+      @include App.desktop {
+        font-size: map-get(App.$font-sizes-desktop, h4);
+      }
     }
   }
   .contact__methods {
