--- a/src/components/mobile/index.scss
+++ b/src/components/mobile/index.scss
@@ -32,6 +32,7 @@
         background-color: inherit;
         top: -6px;
         // transform: translateY(-6px);
+        background-color: map-get(App.$colors, whiteColor);
         left: 0;
       }
       &::after {
@@ -41,6 +42,7 @@
         height: App.rem(1);
         background-color: inherit;
         top: 6px;
+        background-color: map-get(App.$colors, whiteColor);
         // transform: translateY(6px);
         left: 0;
       }
